
Mon Sep 21 13:16:15 CEST 1998

	- Output file modification time in verbose mode.
	- Added check for constant changing of a file.

Mon Sep 21 15:23:54 CEST 1998

	- Updated man pages.

Thu Oct 15 18:21:57 CEST 1998

	- Released version 4.0.

Fri Oct 16 14:22:15 CEST 1998

	- Received patches for RedHat. Argh, should have waited with
	  releasing 4.0.
	- Some more modifications to repair.sh.

Wed Okt 21 13:33:21 CEST 1998

	- Moved configuration to config.h.

Tue Okt 27 20:49:23 MEZ 1998

	- Released 4.1.

Mon Nov 23 09:33:20 MEZ 1998

	- Changed union name in extern.h from options to wdog_options to be
	  able to compile on libc5 systems.

Tue Nov 24 14:32:41 MEZ 1998

	- Added patches by Sascha Schumann <sas@schell.de> for libc5
	  compatibility.

Thu Jan 14 13:43:53 CET 1999

	- Fixed the bug in read_config that caused the max-load-15 line to
	  be read as max-load-1 = 5.

Thu Jan 14 14:17:35 CET 1999

	- And fixed another silly bug that caused network mode to not work
	  anymore.

Wed Jan 20 21:03:30 CET 1999

	- Switched to GNU autoconf, work done by Sascha Schumann
	  <sas@schell.de>.

Fri Jan 22 17:30:41 CET 1999

	- Restructured the configuration management. No need to specify
	  compile time defaults for parameters changeable via
	  /etc/watchdog.conf.

Sat Jan 30 08:58:47 CET 1999

	- Released 4.2.

Mon Feb  1 18:16:04 CET 1999

	- Fixed autoconf bug so CONFIG_FILENAME default is correct.
	- Added info about zombie process to docs.

Fri Feb  5 07:33:47 CET 1999

	- Removed remount call so the one reported hang cannot happen
	  anymore. This call wasn't really needed anyway.
	- Released 4.3.

Thu Feb 18 08:02:01 CET 1999

	- Fixed typo in manpage.

Fri Feb 19 07:49:51 CET 1999

	- Send mail even in case of reboot.
	- Close log only after the last write.
	- Fixed getopt_long handling.

Fri Feb 19 21:33:26 CET 1999

	- Create directory before installing CONFIG_FILENAME.

Sun Feb 28 13:05:11 CET 1999

	- Released 4.4.