@@ -15,7 +15,7 @@ Johnie Ingram <johnie@debian.org>
 
 - more Debian patches
 
-Marc Merlin <marc.merlin@magic.metawire.com>
+Marc Merlin <marcsoft@merlins.org>
 
 - RedHat Patches
 
