@@ -1,5 +1,5 @@
 Title:          watchdog
-Version:        4.4
+Version:        4.5
 Description:    A software watchdog.
 Author:         meskes@debian.org (Michael Meskes)
 Maintained-by:  meskes@debian.org (Michael Meskes)
