@@ -22,6 +22,7 @@
 
 #include <unistd.h>
 #include <getopt.h>
+#include <stdio.h>
 #include <string.h>
 #include <errno.h>
 #include <sys/stat.h>
