@@ -150,7 +150,7 @@ the system. If this binary is not able to fix the problem watchdog will
 still cause a reboot afterwards.
 
 If eventually the machine is halted an email is send to notify a human that
-the machine is going down. STarting with version 4.4 watchdog will also
+the machine is going down. Starting with version 4.4 watchdog will also
 notify the human in charge if the machine is rebooted.
 .LP
 .SH SOFT REBOOT
