@@ -3,9 +3,16 @@
 #file			= /var/log/messages
 #change			= 1407
 
+# Defaults compiled in the binary
 #max-load-1		= 12
 #max-load-5		= 9
 #max-load-15		= 6
+
+# Those values will hopefully never reboot your machine during normal use
+# (if your machine is really hung, the loadavg will go much higher than 25)
+max-load-1		= 24
+max-load-5		= 18
+max-load-15		= 12
 
 repair-binary		= /usr/sbin/repair
 #test-binary		= 
@@ -17,5 +24,7 @@ watchdog-device		= /dev/watchdog
 #admin			= root
 #interval		= 10
 
-#realtime		= yes
-#priority		= 1
+# This greatly decreases the chance that watchdog won't be scheduled before
+# your machine is really loaded
+realtime		= yes
+priority		= 1
