@@ -1,17 +1,17 @@
 Begin3
 Title:          watchdog
-Version:        4.4
-Entered-date:   01Mar99
+Version:        4.5
+Entered-date:   24Apr99
 Description:    A software watchdog.
 Keywords:       daemon automatic-reboot
 Author:         meskes@debian.org (Michael Meskes)
 Maintained-by:  
 Primary-site:   tsx-11.mit.edu /pub/linux/sources/sbin
-		100K watchdog-4.4.tar.gz
+		100K watchdog-4.5.tar.gz
 Alternate-site: sunsite.unc.edu /pub/linux/system/daemons/watchdog
-		100K watchdog-4.4.tar.gz
+		100K watchdog-4.5.tar.gz
 Alternate-site: ftp.debian.org /debian/development/source/misc
-		100K watchdog_4.4.orig.tar.gz
+		100K watchdog_4.5.orig.tar.gz
 Original-site:  
 Platforms:      Linux 1.3.51+
 Copying-policy: GPL
